composer.json dosyasına "prefer-stable" ve "minimum-stability" özellikleri eklendi

--- a/composer.json
+++ b/composer.json
@@ -24,5 +24,7 @@
             "name": "Ahmet Barut",
             "email": "ahmetbarut588@gmail.com"
         }
-    ]
+    ],
+    "prefer-stable": true,
+    "minimum-stability": "stable"
 }
